...
    <string name="show_the_public_key">Show the Public Key</string>
    <string name="hide_the_public_key">Hide the Public Key</string>
    <string name="import_pub_key">Import public key</string>
    <string name="update_pub_key">Update public key</string>
    <string name="pub_key_successfully_imported">Public key imported</string>
    <string name="pub_key_successfully_updated">Public key updated</string>
    <string name="import_private_key">Import Private Key</string>
    <string name="load_from_a_file">Load from a file</string>
    <string name="load_from_clipboard">Load from clipboard</string>
    <string name="choose_another_key">Choose another key</string>
    <string name="continue_">Continue</string>
    <string name="info">Info</string>
    <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your %1$s Key where you are storing it, select the text and copy it. After that, return back to %2$s.</string>
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
...
    <string name="save_to_file">Save to file</string>
    <string name="show_private_key">Show private key</string>
    <string name="template_fingerprint"><![CDATA[Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>]]></string>
    <string name="see_backups_to_save_your_private_keys">Not implemented yet, see \"Backups\" to save your private key to file</string>
    <string name="copied">Copied</string>
    <string name="saved">Saved</string>
    <string name="no_key_available">No key available for your email account %1$s</string>
    <string name="not_saved_file_already_exists">Not saved because the file already exists</string>
    <string name="no_message_with_this_attachment">No message with this attachment</string>
    <string name="attachment_not_found">The attachment not found</string>
    <string name="no_pub_keys">There are no public keys</string>
    <string name="could_not_decrypt_message_due_to_error">Could not decrypt this message due to error:\n\n %1$s </string>
    <string name="show_aliases">Show aliases</string>
...
    <string name="auth_failure_hint_regular_accounts">Failed to log-in, please, check your account name and password in the server settings.</string>
    <string name="connection_lost">Connection lost</string>
    <string name="loading_labels">Loading labels</string>
    <string name="could_not_load_oauth_server_configuration">Couldn\'t load OAuth server configuration</string>
    <string name="all_mail">All Mail</string>
    <string name="stored_pass_phrase_loading">Stored pass phrase: loading &#8230;</string>
    <string name="stored_pass_phrase_matched">Stored pass phrase: matched</string>
    <string name="stored_pass_phrase_mismatch">Stored pass phrase: mismatch</string>
    <string name="could_not_check_pass_phrase">Could not check the pass phrase</string>
    <string name="details">Details</string>
    <string name="reply_to">Reply To</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="date">Date</string>
    <string name="to_receiver">To %1$s</string>
    <string name="and_others">and others&#8230;</string>
    <string name="save_pass_phrase">Save pass phrase</string>
    <string name="remember_pass_phrase_temporarily">Remember pass phrase temporarily</string>
    <string name="pass_phrase_not_provided">Pass phrase is not provided</string>
    <string name="forget_passphrase">Forget pass phrase</string>
    <string name="provide_passphrase">Provide pass phrase</string>
    <string name="your_passphrase">Your pass phrase</string>
    <string name="passphrase_purged_from_memory">Pass phrase purged from memory</string>
    <string name="no_details_about_given_key">There are no details about the given key</string>
    <string name="active_passphrase_session">Active pass phrase session</string>
    <string name="silent">Silent</string>
    <string name="silent_notifications_notification_channel">The silent notifications channel</string>
    <string name="passphrase_type_undefined">Pass phrase type is undefined</string>
    <string name="provide_passphrase_to_decrypt_file">Please provide a pass phrase to decrypt this file</string>
    <plurals name="please_provide_passphrase_for_following_keys">
        <item quantity="one">Please provide a pass phrase for the following key</item>
...
    <string name="password_should_fit_all_requirements">Password should fit all requirements</string>
    <string name="fes_server_has_wrong_settings">Your FES server has the wrong settings. Please ask your help desk for help.</string>
    <string name="check_fes_error_with_retry">An error occurred.\nDetails:%1$s\n\nPlease try again.</string>
    <string name="fes_server_error">Server error:%1$s</string>
    <string name="enterprise_does_not_support_pub_domains">This version of %1$s cannot be used on %2$s domain. If you installed this app by accident, please install non-enterprise FlowCrypt app.</string>
    <string name="error_occurred_with_details_please_try_again">Error occurred, please try again\n\nError details:\n%1$s</string>
    <string name="end_pass_phrase_session">End Pass Phrase Session</string>
    <string name="update_private_key">Update private key</string>
    <string name="new_private_key_details">New Private Key details</string>
    <string name="fingerprint_mismatch_you_are_trying_to_import_different_key">Warning: Fingerprint mismatch. You are trying to import a different key.</string>
    <string name="you_are_trying_to_import_the_same_key">Warning: You are trying to import the same key.</string>
    <string name="warning_existing_key_has_more_recent_signature">Warning: the existing key has a more recent signature on it than the key you are trying to import.</string>
    <string name="enter_new_private_key">Enter a new private key</string>
...
        This service helps to manage passphrases stored in RAM.
        Based on the settings it checks(once per minute) and erases passphrases after some time to
        provide a more secure way of storing the sensitive data. Also, thanks to visible
        notification for foreground services, a user can erase all passphrases stored
        in RAM at any time.</string>
    <string name="preview_is_not_available">The preview is not available</string>
    <string name="add_email_to_existing_key">Add email to existing key</string>
    <string name="please_choose_key_you_would_like_to_modify">Please choose a key you would like to modify</string>
    <string name="created_key_was_imported">The created key was imported</string>
    <string name="message_not_found">Message not found</string>
    <string name="spf_soft_fail_warning"><b>Potentially suspicious message</b>\n\nIt wasn\'t properly verified by the sender, so its authenticity can\'t be confirmed.\nBe careful - avoid clicking links and downloading attachments, or sharing personal info.</string>
    <string name="download_dangerous_file_warning">This executable file was not checked for viruses, and may be dangerous to download or run.\n\nProceed anyway?</string>
    <string name="sending_message">Outbox: sending&#8230;</string>
...
