...
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHint"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKeyPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_pass_phrase_temporarily" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPositiveAction"
            style="@style/AppWidget.Button"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_top_load_account"
            android:theme="@style/AppWidget.Button.Green"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
...
