...
                    style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/from">

                    <EditText
                        android:id="@+id/editTextFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
...
